backend-new.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-new-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-new
  template:
    metadata:
      labels:
        app: backend-new
    spec:
      containers:
        - name: backend-new
          image: art-web-backend:new
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-new-service
spec:
  selector:
    app: backend-new
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
