frontend-new.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-new-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-new
  template:
    metadata:
      labels:
        app: frontend-new
    spec:
      containers:
        - name: frontend-new
          image: art-web-frontend:latest
          imagePullPolicy: Never
          env: # Setting Environmental Variables
          - name: SERVER_URI # Setting Backend URI from configMap
             valueFrom:
               configMapKeyRef:
                 name: backend-new-config # Name of configMap
                 key: server-uri
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-new-service
spec:
  selector:
    app: frontend-new
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
